test/errors/dict/inconsitent_typing1.np
d: Dict[str, str] = {1: 2}
